checkpatch-results/home/fedora/lkml-analysis/lkml/1/0000081184.e10aeb39c1d3567f1906ca36162c977c1b7c0672
WARNING:COMMIT_LOG_LONG_LINE: Possible unwrapped commit description (prefer a maximum 75 chars per line)
#42: 
> > Gitweb:     http://git.kernel.org/tip/d4f587c67fc39e0030ddd718675e252e208da4d7

WARNING:USE_RELATIVE_PATH: use relative pathname instead of absolute in changelog text
#54: 
> /home/mingo/tip/arch/powerpc/kernel/time.c:788: error: 'return' with a value, in function returning void

WARNING:USE_RELATIVE_PATH: use relative pathname instead of absolute in changelog text
#55: 
> /home/mingo/tip/arch/powerpc/kernel/time.c:791: error: 'return' with a value, in function returning void

CHECK:SPACING: spaces preferred around that '+' (ctx:VxV)
#326: FILE: arch/powerpc/kernel/time.c:796:
+	ts->tv_sec = mktime(tm.tm_year+1900, tm.tm_mon+1, tm.tm_mday,
 	                              ^

Whitespace style used in the kernel sources is described in kernel docs.

See: https://www.kernel.org/doc/html/latest/process/coding-style.html#spaces

CHECK:SPACING: spaces preferred around that '+' (ctx:VxV)
#326: FILE: arch/powerpc/kernel/time.c:796:
+	ts->tv_sec = mktime(tm.tm_year+1900, tm.tm_mon+1, tm.tm_mday,
 	                                              ^

CHECK:AVOID_EXTERNS: extern prototypes should be avoided in .h files
#448: FILE: include/linux/time.h:104:
+extern void read_persistent_clock(struct timespec *ts);

Function prototypes don't need to be declared extern in .h
files.  It's assumed by the compiler and is unnecessary.

WARNING:PREFER_DEFINED_ATTRIBUTE_MACRO: Prefer __weak over __attribute__((weak))
#481: FILE: kernel/time/timekeeping.c:498:
+void __attribute__((weak)) read_persistent_clock(struct timespec *ts)

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000081184.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 total: 0 errors, 4 warnings, 3 checks, 391 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000081184.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
